--- a/03HTML/index.style.css
+++ b/03HTML/index.style.css
@@ -15,7 +15,7 @@ html, body
             border: 4px solid #8D27C4;
             border-radius: 25px;
             margin: 2rem;
-            background-color: #D492FC (255, 255, 255);
+            background-color: rgb(255, 255, 255);
         }
     nav, section, footer, article, aside
         {
@@ -29,4 +29,9 @@ html, body
             width: 40%;
             display: inline-block;
             height: 300px;
+            background-color: aqua(34,114,139);
+        }
+        nav,section,footer
+        {
+            background-color: #B27DCE(34,114,139);
         }
